# STATANIM

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REFERENCE.md  SECURITY.md  pyproject.toml  statanim_intro.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: birthdayparadox_scene.py  card_probability.py  card_probability_scene.py  classical_probability.py  conditional_probability.py  hypergeometricscene.py
manim_stats/animations/: transitions.py
manim_stats/charts/: line_plot3d.py
statanim/animations/: clt_demo.py  flip_roll.py  sampling.py  transitions.py
statanim/axes/: axes3d.py  grid3d.py  number_plane3d.py
statanim/charts/: bar_chart3d.py  box_plot3d.py  heat_map3d.py  histogram3d.py  line_plot3d.py  scatter_plot3d.py  violin_plot3d.py
statanim/core/: base.py  colors.py  math_utils.py  tex_utils.py
statanim/distributions/: base_dist.py  cdf_viz.py  continuous_dists.py  discrete_dists.py  normal3d.py  pdf_viz.py  pmf_viz.py
statanim/inference/: confidence_interval.py  error_types.py  hypothesis.py  sampling_dist.py
statanim/probability/: bayes.py  prob_tree.py  sample_space.py  venn3d.py
statanim/props/: card.py  coin.py  die.py  spinner.py  urn.py
statanim/regression/: correlation.py  regression_plane.py  residuals.py
statanim/scenes/: demo_bayes.py  demo_clt.py  demo_distributions.py  demo_hypothesis.py
statanim/ui/: labels.py  panels.py  table3d.py  ticker.py
